# beamL4

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  X64_dev.cmake  mkiso.sh  mkkernel.sh  rust-toolchain.toml  simulate.sh  test.sh
.cargo/: config.toml
.github/workflows/: ci.yml
algorithms/: Cargo.toml
algorithms/src/: idalloc.rs  lib.rs  pagetable.rs  unialloc.rs
algorithms/src/vm/: mod.rs  vcpu.rs  vcpu_decode.rs
beaml4-init/: Cargo.toml  build.rs
beaml4-init/src/: alloc_control.rs  elfloader.rs  ipcbench.rs  main.rs  pci.rs  static_config.rs  sysproc.rs  tsc.rs  virtio_pci.rs
beaml4-init/src/acpi_loader/: handler.rs  mod.rs
beaml4-init/src/util/: bootinfo.rs  irq_aggregator.rs  mod.rs
dbgserver/: Cargo.toml
dbgserver/src/: main.rs  shell.rs
examples/deno_vmcall/: main.ts  ops.json  vmcall.S  vmcall.ts
ipc/: Cargo.toml
ipc/src/: alloc.rs  cap_blackhole.rs  conventions.rs  dbgsvc.rs  host_paging.rs  lib.rs  logging.rs  misc.rs  msgbuf.rs  timer.rs  timesvc.rs  untyped.rs  userfault.rs  virtiosvc.rs  vmmsvc.rs  x86_ioport.rs
logserver/: Cargo.toml
logserver/src/: main.rs
support/targets/: x86_64-sel4.json
timeserver/: Cargo.toml
timeserver/src/: main.rs
virtioserver/: Cargo.toml
virtioserver/src/: main.rs  pipeline.rs  shared.rs  virtq.rs
vmm/: Cargo.toml
vmm/src/: dump.rs  fault.rs  lib.rs  paging.rs  runtime.rs  vapic.rs  virtio.rs  x86_exception.rs
vmm/src/pv/: mod.rs  patch_point.rs  ptw.rs  swtlb.rs  vcpu.rs
vmm/src/vmx/: helper.rs  mod.rs  vcpu.rs
vmmserver/: Cargo.toml
vmmserver/src/: hypercall.rs  loader.rs  main.rs  shared.rs  vmservice.rs
