[package]
name = "vmmserver"
version = "0.1.0"
edition = "2021"

[dependencies]
algorithms = { path = "../algorithms" }
ipc = { path = "../ipc" }
vmm = { path = "../vmm" }

elf.workspace = true
heapless.workspace = true
iced-x86.workspace = true
intrusive-collections.workspace = true
rkyv.workspace = true
scapegoat.workspace = true
sel4.workspace = true
spin.workspace = true
talc.workspace = true
x86.workspace = true
